<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NutrIF</string>
    <string name="hello_world">Hello world!</string>
    <string name="statusButton">Status do Servidor</string>
    <string name="imcButton">Calcular IMC</string>
    <string name="title_activity_imc">ImcActivity</string>
    <string name="title_calculavctactivity">VCTActivity</string>
    <string name="telaImc">Cálculo do IMC</string>
    <string name="peso">Digite o seu peso (kg)</string>
    <string name="altura">Digite a sua altura (cm)</string>
    <string name="imc">Calcular</string>
    <string name="action_settings">Settings</string>
    <string name="telaCal">Calcular valor calórico</string>
    <string name="telaPerfil">Calcular Perfil Antropométrico</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string-array name="niveis">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_perfil_button_async_task">PerfilButtonAsyncTask</string>

</resources>
