<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/madeira"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center|right"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/pesoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pesoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/alturaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/alturaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <TextView
        android:id="@+id/telaImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/telaImc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/calculaImcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:background="@drawable/buttonbg"
        android:padding="10dp"
        android:text="@string/imc" />

</RelativeLayout>