<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/madeira"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/pesoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/telaImc"
        android:layout_centerHorizontal="true"
        android:text="@string/peso"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/pesoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pesoTextView"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/alturaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/alturaTextView"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/alturaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pesoEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/altura"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/nasc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Data de nascimento (XXXX/XX/XX)"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/calculaVctButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:layout_marginBottom="25dp"
        android:layout_toRightOf="@+id/radioButton2"
        android:background="@drawable/buttonbg"
        android:padding="10dp"
        android:text="@string/imc" />

    <TextView
        android:id="@+id/telaImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/telaCal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculaVctButton"
        android:layout_alignLeft="@+id/alturaTextView"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioButton4"
        android:layout_alignRight="@+id/editText1"
        android:text="Sexo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_centerVertical="true"
        android:gravity="center|right"
        android:orientation="vertical"
        android:padding="10dp" >
    </LinearLayout>
    
    <RadioGroup
        android:id="@+id/rgopcoes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nasc"
        android:layout_alignRight="@+id/pesoTextView"
        android:text="F" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nasc"
        android:layout_toRightOf="@+id/alturaTextView"
        android:text="M" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioButton2"
        android:layout_alignBottom="@+id/radioButton2"
        android:layout_alignLeft="@+id/telaImc"
        android:text="1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignLeft="@+id/alturaTextView"
        android:text="Nivel de esportes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/radioButton1"
        android:text="2" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nasc"
        android:layout_toRightOf="@+id/radioButton2"
        android:text="3" />

</RelativeLayout>